# full-stack-starter

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/auth/: __init__.py  backend.py  manager.py  router.py
backend/app/models/: __init__.py  payment.py  user.py
backend/app/routes/: ai.py  payments.py  users.py
backend/app/schemas/: payment.py  user.py
backend/app/services/: ai.py  credits.py  stripe.py
deploy/: backend.service  nginx.conf
frontend/: Dockerfile  components.json  index.html  package.json  pnpm-lock.yaml
frontend/src/: index.css  router.tsx
frontend/src/hooks/: use-auth.ts  use-credits.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AppPage.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  Pricing.tsx  Register.tsx
frontend/src/stores/: auth-store.ts
scripts/: dev.sh
