[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beanie>=2.0.1",
    "fastapi>=0.129.0",
    "fastapi-users[beanie,oauth]>=15.0.4",
    "httpx-oauth>=0.16.1",
    "motor>=3.7.1",
    "pydantic-settings>=2.12.0",
    "stripe>=14.3.0",
    "uvicorn[standard]>=0.40.0",
]
